--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/pom.xml
@@ -39,6 +39,7 @@
   <modules>
     <module>kie-wb-common-stunner-showcase-standalone</module>
     <module>kie-wb-common-stunner-showcase-project</module>
+    <module>kie-wb-common-stunner-kogito-showcase</module>
   </modules>
 
 </project>
