--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-kogito-showcase/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-kogito-showcase/src/main/resources/META-INF/ErraiApp.properties
@@ -28,8 +28,7 @@
 # file, although it is rarely necessary. See the documentation at
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
-errai.ioc.enabled.alternatives=org.kie.workbench.common.stunner.kogito.client.workarounds.MockIsSubmarine \
-                               org.uberfire.client.plugin.RuntimePluginsServiceProxyClientImpl \
+errai.ioc.enabled.alternatives=org.uberfire.client.plugin.RuntimePluginsServiceProxyClientImpl \
                                org.uberfire.client.workbench.WorkbenchServicesProxyClientImpl \
                                org.uberfire.client.workbench.VFSServiceProxyClientImpl \
                                org.uberfire.client.workbench.VFSLockServiceProxyClientImpl \
