inserting errai.ioc.blacklist to avoid errors on intellij webapp bootstrap

--- a/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-kogito-showcase/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-showcase/kie-wb-common-stunner-kogito-showcase/src/main/resources/META-INF/ErraiApp.properties
@@ -32,4 +32,8 @@ errai.ioc.enabled.alternatives=org.uberfire.client.plugin.RuntimePluginsServiceP
                                org.uberfire.client.workbench.WorkbenchServicesProxyClientImpl \
                                org.uberfire.client.workbench.VFSServiceProxyClientImpl \
                                org.uberfire.client.workbench.VFSLockServiceProxyClientImpl \
-                               org.uberfire.preferences.client.store.PreferenceBeanStoreClientImpl 
+                               org.uberfire.preferences.client.store.PreferenceBeanStoreClientImpl
+
+errai.ioc.blacklist=org.uberfire.preferences.client.store.PreferenceBeanStoreImpl \
+                    org.uberfire.client.RuntimePluginsServiceProxyBackendImpl \
+                    org.uberfire.client.WorkbenchServicesProxyBackendImpl 
