[DROOLS-3727] Rebased to origin/DROOLS-3727

--- a/kie-wb-common-submarine/pom.xml
+++ b/kie-wb-common-submarine/pom.xml
@@ -38,6 +38,7 @@
   <modules>
     <module>kie-wb-common-submarine-api</module>
     <module>kie-wb-common-submarine-client</module>
+    <module>kie-wb-common-kogito-webapp-base</module>
   </modules>
 
 </project>
