--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
@@ -19,16 +19,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>kie-wb-common-stunner-showcase</artifactId>
+    <artifactId>kie-wb-common-stunner-bpmn</artifactId>
     <groupId>org.kie.workbench.stunner</groupId>
     <version>7.27.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>kie-wb-common-stunner-showcase-kogito</artifactId>
+  <artifactId>kie-wb-common-bpmn-kogito-runtime</artifactId>
   <packaging>war</packaging>
-  <name>Kie Workbench - Common - Stunner - Kogito Showcase</name>
-  <description>Kie Workbench - Common - Stunner - Kogito Showcase</description>
+  <name>Kie Workbench - Common - Stunner - BPMN Definition Set - Kogito Runtime</name>
+  <description>Kie Workbench - Common - Stunner - BPMN Definition Set - Kogito Runtime</description>
 
   <properties>
     <errai.jboss.home>${project.build.directory}/wildfly-${version.org.jboss.errai.wildfly}</errai.jboss.home>
@@ -759,7 +759,7 @@
             <compileSourcesArtifact>org.uberfire:uberfire-preferences-api</compileSourcesArtifact>
             <compileSourcesArtifact>org.uberfire:uberfire-preferences-client</compileSourcesArtifact>
             <compileSourcesArtifact>org.uberfire:uberfire-preferences-ui-client</compileSourcesArtifact>
-<!--            <compileSourcesArtifact>org.uberfire:uberfire-preferences-client-backend</compileSourcesArtifact>-->
+            <!--            <compileSourcesArtifact>org.uberfire:uberfire-preferences-client-backend</compileSourcesArtifact>-->
 
             <!-- Uberfire Experimentals -->
             <compileSourcesArtifact>org.uberfire:uberfire-experimental-api</compileSourcesArtifact>
@@ -925,6 +925,31 @@
       </build>
     </profile>
 
+    <!-- Kogito profile builds optimized and smaller output -->
+    <profile>
+      <id>kogito</id>
+      <properties>
+        <gwt.memory.settings>-Xmx3g -Xms1g -Xss1M</gwt.memory.settings>
+        <gwt.compiler.localWorkers>4</gwt.compiler.localWorkers>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>gwt-maven-plugin</artifactId>
+              <configuration>
+                <module>org.kie.workbench.common.stunner.kogito.KogitoBPMNEditor</module>
+                <draftCompile>true</draftCompile>
+                <optimizationLevel>9</optimizationLevel>
+                <style>OBFUSCATED</style>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
     <!-- Fast compiled build including Source maps for easier debugging. -->
     <profile>
       <id>sources</id>
@@ -969,21 +994,5 @@
         </plugins>
       </build>
     </profile>
-    <!-- profile to disable GWT compilation of showcase (useful in full downstream builds) -->
-    <profile>
-      <id>no-showcase</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>gwt-maven-plugin</artifactId>
-            <configuration>
-              <skip>true</skip>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
   </profiles>
-
 </project>
