--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
@@ -112,6 +112,13 @@
                 <include>Jsonix-all.js</include>
               </includes>
             </fileset>
+            <fileset>
+              <directory>src/main/java/gwt/jsonix/marshallers/xjc/plugin</directory>
+              <includes>
+                <include>JsUtils.java</include>
+              </includes>
+            </fileset>
+
           </filesets>
         </configuration>
       </plugin>
@@ -196,29 +203,6 @@
           </execution>
         </executions>
       </plugin>
-      <!-- GWT Maven Plugin-->
-      <!--<plugin>-->
-      <!--<groupId>org.codehaus.mojo</groupId>-->
-      <!--<artifactId>gwt-maven-plugin</artifactId>-->
-      <!--<executions>-->
-      <!--<execution>-->
-      <!--<goals>-->
-      <!--<goal>compile</goal>-->
-      <!--<goal>generateAsync</goal>-->
-      <!--<goal>test</goal>-->
-      <!--</goals>-->
-      <!--</execution>-->
-      <!--</executions>-->
-      <!--<configuration>-->
-      <!--<module>org.kie.workbench.common.dmn.webapp.kogito.marshaller.DMNMarshaller</module>-->
-      <!--<style>PRETTY</style>-->
-      <!--<compileReport>true</compileReport>-->
-      <!--<soycDetailed>true</soycDetailed>-->
-      <!--<logLevel>TRACE</logLevel>-->
-      <!--<noServer>false</noServer>-->
-      <!--</configuration>-->
-      <!--</plugin>-->
-      <!-- DISABLE CHECKSTYLE -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
