Removing some backend dependencies from bpmn kogito webapp

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/src/main/resources/META-INF/ErraiApp.properties
@@ -36,4 +36,8 @@ errai.ioc.enabled.alternatives=org.uberfire.client.plugin.RuntimePluginsServiceP
 
 errai.ioc.blacklist=org.uberfire.preferences.client.store.PreferenceBeanStoreImpl \
                     org.uberfire.client.RuntimePluginsServiceProxyBackendImpl \
-                    org.uberfire.client.WorkbenchServicesProxyBackendImpl 
+                    org.uberfire.client.WorkbenchServicesProxyBackendImpl
+
+errai.marshalling.use_static_marshallers=false
+
+errai.marshalling.force_static_marshallers=false  
