--- a/kie-wb-common-kogito/kie-wb-common-kogito-api/pom.xml
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-api/pom.xml
@@ -19,26 +19,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.kie.workbench</groupId>
-    <artifactId>kie-wb-common</artifactId>
+    <artifactId>kie-wb-common-submarine</artifactId>
     <version>7.28.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>kie-wb-common-submarine</artifactId>
-  <name>Kie Workbench - Common - Submarine</name>
-  <description>Kie Workbench - Common - Submarine</description>
-  <packaging>pom</packaging>
+  <artifactId>kie-wb-common-kogito-api</artifactId>
+  <name>Kie Workbench - Common - Kogito - API</name>
+  <description>Kie Workbench - Common - Kogito - API</description>
+  <packaging>jar</packaging>
 
   <properties>
-    <checkstyle.failOnViolation>true</checkstyle.failOnViolation>
-    <checkstyle.logViolationsToConsole>true</checkstyle.logViolationsToConsole>
-    <jacoco.haltOnFailure>true</jacoco.haltOnFailure>
+    <java.module.name>org.kie.wb.common.kogito.api</java.module.name>
   </properties>
 
-  <modules>
-    <module>kie-wb-common-submarine-api</module>
-    <module>kie-wb-common-submarine-client</module>
-    <module>kie-wb-common-kogito-webapp-base</module>
-  </modules>
+  <dependencies>
+
+    <!-- Errai -->
+    <dependency>
+      <groupId>org.jboss.errai</groupId>
+      <artifactId>errai-ioc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.errai</groupId>
+      <artifactId>errai-ui</artifactId>
+    </dependency>
+
+  </dependencies>
 
 </project>
