--- a/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/pom.xml
+++ b/kie-wb-common-kogito/kie-wb-common-kogito-webapp-base/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>kie-wb-common-submarine</artifactId>
+    <artifactId>kie-wb-common-kogito</artifactId>
     <groupId>org.kie.workbench</groupId>
     <version>7.28.0-SNAPSHOT</version>
   </parent>
