--- a/kie-wb-common-kogito/pom.xml
+++ b/kie-wb-common-kogito/pom.xml
@@ -19,32 +19,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.kie.workbench</groupId>
-    <artifactId>kie-wb-common-submarine</artifactId>
+    <artifactId>kie-wb-common</artifactId>
     <version>7.28.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>kie-wb-common-submarine-api</artifactId>
-  <name>Kie Workbench - Common - Submarine - API</name>
-  <description>Kie Workbench - Common - Submarine - API</description>
-  <packaging>jar</packaging>
+  <artifactId>kie-wb-common-kogito</artifactId>
+  <name>Kie Workbench - Common - Kogito</name>
+  <description>Kie Workbench - Common - Kogito</description>
+  <packaging>pom</packaging>
 
   <properties>
-    <java.module.name>org.kie.wb.common.submarine.api</java.module.name>
+    <checkstyle.failOnViolation>true</checkstyle.failOnViolation>
+    <checkstyle.logViolationsToConsole>true</checkstyle.logViolationsToConsole>
+    <jacoco.haltOnFailure>true</jacoco.haltOnFailure>
   </properties>
 
-  <dependencies>
-
-    <!-- Errai -->
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-ioc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.errai</groupId>
-      <artifactId>errai-ui</artifactId>
-    </dependency>
-
-  </dependencies>
+  <modules>
+    <module>kie-wb-common-kogito-api</module>
+    <module>kie-wb-common-kogito-client</module>
+    <module>kie-wb-common-kogito-webapp-base</module>
+  </modules>
 
 </project>
