--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/pom.xml
@@ -30,7 +30,7 @@
   <packaging>jar</packaging>
 
   <properties>
-    <java.module.name>org.kie.wb.common.submarine.client</java.module.name>
+    <java.module.name>org.kie.wb.common.kogito.client</java.module.name>
   </properties>
 
   <dependencies>
@@ -133,7 +133,7 @@
     <!-- Kogito -->
     <dependency>
       <groupId>org.kie.workbench</groupId>
-      <artifactId>kie-wb-common-submarine-client</artifactId>
+      <artifactId>kie-wb-common-kogito-client</artifactId>
     </dependency>
 
     <!-- GWT -->
