rename submarine to kogito on pom.xml

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/pom.xml
@@ -167,7 +167,7 @@
       <artifactId>kie-soup-commons</artifactId>
     </dependency>
 
-    <!-- Submarine -->
+    <!-- Kogito -->
 
     <dependency>
       <groupId>org.kie.workbench.stunner</groupId>
