--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-marshalling/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-marshalling/pom.xml
@@ -124,7 +124,7 @@
       <artifactId>kie-soup-commons</artifactId>
     </dependency>
 
-    <!-- Submarine -->
+    <!-- Kogito -->
 
     <dependency>
       <groupId>org.kie.workbench.stunner</groupId>
