--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <module>kie-wb-common-cli</module>
     <module>kie-wb-common-dev</module>
     <module>kie-wb-common-command-api</module>
-    <module>kie-wb-common-submarine</module>
+    <module>kie-wb-common-kogito</module>
   </modules>
 
   <properties>
