--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
@@ -97,9 +97,6 @@
               <includes>
                 <include>**</include>
               </includes>
-              <excludes>
-                <exclude>ComponentsWidthsExtension.java</exclude>
-              </excludes>
             </fileset>
             <fileset>
               <directory>${js.destination}</directory>
@@ -108,6 +105,7 @@
                 <include>DI.js</include>
                 <include>DMNDI12.js</include>
                 <include>DMN12.js</include>
+                <include>KIE.js</include>
                 <include>Jsonix-all.js</include>
               </includes>
             </fileset>
@@ -195,6 +193,7 @@
                 <copy file="${project.build.directory}/generated-sources/xjc/DI.js" tofile="${js.destination}/DI.js"/>
                 <copy file="${project.build.directory}/generated-sources/xjc/DMNDI12.js" tofile="${js.destination}/DMNDI12.js"/>
                 <copy file="${project.build.directory}/generated-sources/xjc/DMN12.js" tofile="${js.destination}/DMN12.js"/>
+                <copy file="${project.build.directory}/generated-sources/xjc/KIE.js" tofile="${js.destination}/KIE.js"/>
               </target>
             </configuration>
             <goals>
