--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-testing/.gitignore
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-testing/.gitignore
@@ -12,6 +12,7 @@
 /src/main/webapp/model/DI.js
 /src/main/webapp/model/DMN12.js
 /src/main/webapp/model/DMNDI12.js
+/src/main/webapp/model/KIE.js
 /src/main/webapp/model/Jsonix-all.js
 /src/main/webapp/model/MainJs.js
 
