Adding gwt-dev on kie-wb-common-stunner-bpmn-kogito-runtime

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-kogito-runtime/pom.xml
@@ -35,7 +35,6 @@
     <gwt.compiler.localWorkers>4</gwt.compiler.localWorkers>
   </properties>
   <dependencies>
-
     <!--Logs-->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -575,6 +574,11 @@
     <dependency>
       <groupId>com.google.elemental2</groupId>
       <artifactId>elemental2-dom</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-dev</artifactId>
       <scope>provided</scope>
     </dependency>
 
