--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
@@ -33,6 +33,7 @@
     <version.jsonix-scripts>3.0.0</version.jsonix-scripts>
     <version.gwt-jsonix-schema-compiler>1.0b</version.gwt-jsonix-schema-compiler>
     <version.jaxb2-basics>0.12.0</version.jaxb2-basics>
+    <version.jaxb2-namespace-prefix>1.3</version.jaxb2-namespace-prefix>
     <version.com.google.jsinterop.base>1.0.0-beta-1</version.com.google.jsinterop.base>
     <version.maven-jaxb2-plugin>0.14.0</version.maven-jaxb2-plugin>
     <js.destination>${project.basedir}/src/main/resources/org/kie/workbench/common/dmn/webapp/kogito/marshaller/js</js.destination>
@@ -49,6 +50,11 @@
         <groupId>org.jvnet.jaxb2_commons</groupId>
         <artifactId>jaxb2-basics</artifactId>
         <version>${version.jaxb2-basics}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jvnet.jaxb2_commons</groupId>
+        <artifactId>jaxb2-namespace-prefix</artifactId>
+        <version>${version.jaxb2-namespace-prefix}</version>
       </dependency>
       <dependency>
         <groupId>com.google.jsinterop</groupId>
@@ -81,6 +87,11 @@
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -137,6 +148,7 @@
               <args>
                 <arg>-Xgwtjsonix</arg>
                 <arg>-Xinheritance</arg>
+                <arg>-Xnamespace-prefix</arg>
                 <arg>-jsid=${project.build.sourceDirectory}</arg>
                 <arg>-jsmpkg=org.kie.workbench.common.dmn.webapp.kogito.marshaller.mapper</arg>
               </args>
@@ -148,6 +160,10 @@
                 <plugin>
                   <groupId>org.jvnet.jaxb2_commons</groupId>
                   <artifactId>jaxb2-basics</artifactId>
+                </plugin>
+                <plugin>
+                  <groupId>org.jvnet.jaxb2_commons</groupId>
+                  <artifactId>jaxb2-namespace-prefix</artifactId>
                 </plugin>
               </plugins>
             </configuration>
