[DROOLS-4521] Instantiating dmn12 on newly created dmn12. Correctly set/update definitions. Begin manual implementation of "wrapping". TO BE DONE: finish all potential wrapping; finish "if/else" for drgelement inside DMNMarshallerKogitoMarshaller (line 361). This version works with gwt-jsonix KOGITO-299.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/pom.xml
@@ -1000,6 +1000,18 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Exclude generated code from checkstyle validation -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <excludes>
+            org/kie/workbench/common/dmn/webapp/kogito/marshaller/js/**/*,
+            org/kie/workbench/common/dmn/webapp/kogito/marshaller/mapper/JsUtils.java,
+            org/kie/workbench/common/dmn/webapp/kogito/marshaller/mapper/JSIName.java
+          </excludes>
+        </configuration>
+      </plugin>
     </plugins>
 
   </build>
