--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-marshaller/pom.xml
@@ -225,6 +225,7 @@
         <configuration>
           <excludes>
             org/kie/workbench/common/dmn/webapp/kogito/marshaller/js/**/*,
+            org/kie/workbench/common/dmn/webapp/kogito/marshaller/mapper/JSIName.java,
             org/kie/workbench/common/dmn/webapp/kogito/marshaller/mapper/JsUtils.java
           </excludes>
         </configuration>
