--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/resources/META-INF/ErraiApp.properties
@@ -28,5 +28,4 @@
 # file, although it is rarely necessary. See the documentation at
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
-errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.showcase.client.workarounds.MockIsKogito
-
+errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.webapp.kogito.common.client.workarounds.IsKogito
