--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/resources/META-INF/ErraiApp.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2017 Red Hat, Inc. and/or its affiliates.
+# Copyright 2019 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -28,5 +28,7 @@
 # file, although it is rarely necessary. See the documentation at
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
-errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.webapp.kogito.common.client.workarounds.IsKogito \
-                               org.uberfire.preferences.client.store.PreferenceBeanStoreClientImpl
+errai.ioc.enabled.alternatives=org.uberfire.client.workbench.VFSServiceProxyClientImpl \
+                               org.uberfire.client.workbench.VFSLockServiceProxyClientImpl \
+                               org.uberfire.client.workbench.WorkbenchServicesProxyClientImpl \
+                               org.uberfire.client.plugin.RuntimePluginsServiceProxyClientImpl
