--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-testing/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-testing/pom.xml
@@ -1024,6 +1024,7 @@
         <configuration>
           <excludes>
             org/kie/workbench/common/dmn/webapp/kogito/marshaller/js/**/*,
+            org/kie/workbench/common/dmn/webapp/kogito/marshaller/jre/package-info.java,
             org/kie/workbench/common/dmn/webapp/kogito/marshaller/mapper/JSIName.java,
             org/kie/workbench/common/dmn/webapp/kogito/marshaller/mapper/JsUtils.java
           </excludes>
